optimize fo m;  fix some element being too small in mobile devices

--- a/css/queries.css
+++ b/css/queries.css
@@ -413,7 +413,15 @@
   }
 
   .pricing-plan {
-    width: 100%;
+    width: 80%;
+  }
+
+  .pricing-plan--starter {
+    justify-self: center;
+  }
+
+  .pricing-plan--complete {
+    justify-self: center;
   }
 
   .copyright {
@@ -479,6 +487,15 @@
 
   .cta-text-box {
     padding: 3.2rem;
+  }
+
+  .list {
+    padding: 2rem;
+  }
+
+  .list-item {
+    font-size: 1.6rem;
+    margin-bottom: 1.2rem;
   }
 }
 
